css/editoria11y.css
/* Applies to elements in light DOM ===== */

ed11y-element-result, ed11y-element-panel {
    opacity: 1 !important;
    outline: 0 !important;
}

ed11y-element-result {
    position: absolute !important;
    z-index: var(--ed11y-buttonZIndex, 9999) !important;
}

.ed11y-hidden-highlight {
    box-shadow: inset 0 0 0 1px var(--ed11y-warning, #fad859), inset 0 0 0 2px var(--ed11y-primary, #276499), 0 0 0 1px var(--ed11y-warning, #fad859), 0 0 0 3px var(--ed11y-primary, #276499), 0 0 1px 3px !important;
}

.ed11y-ring-red {
    box-shadow: 0 0 0 1px #fff, inset 0 0 0 2px var(--ed11y-alert, #b80519), 0 0 0 3px var(--ed11y-alert, #b80519), 0 0 1px 3px !important;
    outline: 2px solid var(--ed11y-alert, #b80519) !important;
    outline-offset: 1px !important;
}

.ed11y-ring-yellow {
    box-shadow: 0 0 0 1px #fff, inset 0 0 0 2px var(--ed11y-warning, #fad859), 0 0 0 3px var(--ed11y-warning, #fad859), 0 0 1px 3px !important;
    outline: 2px solid var(--ed11y-warning, #fad859) !important;
    outline-offset: 1px !important;
}


/* All elements =========================== */

:host(.ed11y-element) { /* this will not work. */
    all:initial;
}

.ed11y-hidden {
    display:none;
}

.ed11y-wrapper {
    font-size: var(--ed11y-baseFontSize, 14px);
    line-height: 1.5;
    font-family: var(--ed11y-baseFontFamily, -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif);
}

.ed11y-small {
    font-size: .93em;
    opacity: .9;
}

.ed11y-sr-only {
    display: block;
    width: 1px;
    height: 1px;
    overflow: hidden;
    opacity: 0;
    position: absolute;
}

.ed11y-wrapper button {
    margin: 0;
    border: 0;
    background: inherit;
    font-family: inherit;
    font-size: .7857em;
    font-weight: 500;
    cursor: pointer;
    color: var(--ed11y-primaryText, #fffdf7);
    text-align: center;
}



/* Panel ================================ */
:host(ed11y-element-panel.ed11y-element) {
    position: fixed;
    right: 1%;
    bottom: 1%;
    opacity: 0;
    transition: opacity .25s ease-in;
    z-index: 9999;
}

:host(ed11y-element-panel.ed11y-element):focus, .ed11y-wrapper div:focus { /* div?? */
    outline: transparent;
}

.ed11y-panel-wrapper {
    width: clamp(160px, 23em, 92vw);
    background: var(--ed11y-bg, #fffffe);
    color: var(--ed11y-text, #20160c);
    border-radius: var(--ed11y-borderRadius, 1);
    box-shadow: 1px 1px 4px var(--ed11y-text, #20160c);
    padding: var(--ed11y-panelBorder, 0);
}

.ed11y-panel-wrapper [tabindex]:focus-visible {
    box-shadow: 0 0 0 3px var(--ed11y-bg, #fffffe), 0 0 0 4px var(--ed11y-text, #20160c);
}

.ed11y-panel-wrapper a {
    color: inherit;
}

.ed11y-panel-wrapper .content {
    padding: 4px 4px 4px 12px;
    border: var(--ed11y-panelBorder, 0) solid var(--ed11y-primary, #276499);
    border-top: 0;
    border-radius: 0 0 var(--ed11y-borderRadius, 1) var(--ed11y-borderRadius, 1);
    color: var(--ed11y-text, #20160c);
    max-height: max(240px, 50vh);
    overflow: auto;
}

.ed11y-panel-wrapper .content-text {
    margin-top: -2px;
}

@media (width >= 400px) {
    #ed11y-toggle-tab {
        display: grid;
        grid-gap: 1em;
        grid-template-columns: 16em 1fr;
    }
}

.ed11y-buttonbar {
    display: flex;
}

.ed11y-panel-wrapper button {
    background: var(--ed11y-button, transparent);
    padding: 7px 4px;
    flex: auto;
}

.ed11y-panel-wrapper button:hover {
    background: var(--ed11y-text, #20160c);
}

.ed11y-panel-wrapper #shut-panel {
}

.ed11y-buttonbar button {
    color: var(--ed11y-panelBarText, #20160c);
    background: var(--ed11y-panelBar, #fffffe);
    box-shadow: var(--ed11y-panelBarShadow);
}

.ed11y-buttonbar button:hover {
    background: var(--ed11y-activeTab, #276499);
    color: var(--ed11y-activeTabText, #fffffe);
}

.ed11y-buttonbar button:first-child {
    border-radius: var(--ed11y-borderRadius, 1) 0 0 0;
    border-left: 2px solid transparent;
}

.ed11y-buttonbar button:last-child {
    border-radius: 0 var(--ed11y-borderRadius, 1) 0 0;
}

.ed11y-buttonbar button[aria-selected="true"] {
    background: var(--ed11y-activeTab, #276499);
    box-shadow: inset 0 0 0 1px var(--ed11y-primary, #276499), inset 0 -2px var(--ed11y-primary, #276499);
    color: var(--ed11y-activeTabText, #fffffe);
    border: 0;
}

.ed11y-buttonbar button + button[aria-selected="true"] {
    margin-left: -1px;
}

.ed11y-shut {
    border-radius: 100%;
    background: transparent;
    width: auto;
    box-shadow: none;
}

.ed11y-shut button,
.ed11y-shut .content,
.ed11y-active .toggle-count,
.ed11y-shut .close {
    display: none;
}

.ed11y-shut #ed11y-toggle {
    display: block;
    border-radius: 100%;
    padding: 8px;
    border: 0;
    min-width: 3em;
    height: 3em;
    font-size: clamp(.7857em, 2vw, 1.07em);
}

.ed11y-pass.ed11y-shut #ed11y-toggle {
    background: var(--ed11y-primary, #276499);
    color: var(--ed11y-primaryText, #fffdf7);
    line-height: 1;
    box-shadow: inset 0 0 0 2px var(--ed11y-primary, #276499), inset 0 0 0 4px #fffe;
    font-family: georgia, serif;
}

.ed11y-pass.ed11y-shut #ed11y-toggle:hover {
    box-shadow: inset 0 0 0 2px #fffe, 0 0 0 2px var(--ed11y-primary, #276499);
}

.ed11y-shut.ed11y-warnings #ed11y-toggle {
    background-color: var(--ed11y-warning, #fad859);
    color: #000b;
    box-shadow: inset 0 0 0 2px var(--ed11y-warning, #fad859), inset 0 0 0 3px #000b, 0 0 2px #000;
}

.ed11y-shut.ed11y-warnings #ed11y-toggle:hover {
    box-shadow: inset 0 0 0 2px var(--ed11y-warning, #fad859), inset 0 0 0 3px #000b, 0 0 0 3px #000b;
}

.ed11y-shut.ed11y-errors #ed11y-toggle {
    color: var(--ed11y-alert, #b80519);
    box-shadow: inset 0 0 0 1px var(--ed11y-alert, #b80519), inset 0 0 0 2px #fefefe, inset 0 0 0 6px var(--ed11y-alert, #b80519), 1px 1px 5px 0 rgb(0 0 0 / 50%);
    background: #fefefe;
}
/* ... */

